JS - U3 - Actividad Obligatoria
Validación básica de formulario

--- a/J3-U3-Actividad-Obligatoria/unidad8.html
+++ b/J3-U3-Actividad-Obligatoria/unidad8.html
@@ -2,13 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<style>
-		.renglon { display: block; text-align: center;}
-		label { display: inline-block; width: 55px; text-align: left; }
-		h2 { font-weight: normal; text-align: center; }
-		button { text-align: center; }
-	</style>
+	<title>JS- U3 - Actividad Obligatoria</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<h2>Ingreso al Sistema</h2>
@@ -27,6 +22,6 @@
 		</div>
 	</form>
 
-	<script src="control.js"></script>
+	<script src="js/control.js"></script>
 </body>
 </html>
